Changed the source of the list of characterIDs from the enum class to the characters' map